tests/negative/test_data_arr_not_def_init.orb
data Foo;

fnc main() {
    let f:(Foo 4);
};